<resources>
    <string name="nfc_detect_error">Nie wykryto taga NFC!</string>
    <string name="nfc_write_error">Zbliż tag jeszcze raz</string>
    <string name="nfc_write_success">Pomyślnie zapisano na tagu!</string>
    <string name="nfc_null">Twój telefon nie obsługuje NFC</string>
    <string name="activation_code_error">podany kod jest niepoprawny</string>
    <string name="activation_code">kod aktywacyjny</string>
    <string name="address_error">podaj adres</string>
    <string name="address">adres</string>
    <string name="app_name">e-legitymacja</string>
    <string name="back">Powrót</string>
    <string name="internet_connection_error">brak połączenia z internetem</string>
    <string name="create_account">stwórz konto</string>
    <string name="creating_account">Tworzenie konta&#8230;</string>
    <string name="e_mail_error">podany adres e-mail jest nie poprawny</string>
    <string name="e_mail">e-mail</string>
    <string name="index_number_error">podaj 6 cyfr indeksu(albumu)</string>
    <string name="index_number">nr indeksu</string>
    <string name="login_failed">nie poprawne dane logowania</string>
    <string name="login_offline">Zaloguj offline</string>
    <string name="login_offline_message">"Aby się zarejestrować lub zalogować do systemu po raz pierwszy wymagane jest połącznie z internetem.</string>
    <string name="offline_message">Jesteś w  tybie offline. Kody obecności zostaną zapisane i zweryfikowane przy najbliższym logowaniu do serwisu.\nPozostałe aktywności są nie dostępne.</string>
    <string name="login">Logowanie&#8230;</string>
    <string name="logo_description">Logo Politechniki Wrocławskiej z roku 2017</string>
    <string name="name_first_error">podaj imię minmum 3 litery</string>
    <string name="name_first">imię</string>
    <string name="name_last_error">podaj nazwisko minmum 3 litery</string>
    <string name="name_last">nazwisko</string>
    <string name="name_middle">drugie imię</string>
    <string name="new_account_link">Nie masz konta? Zarejestruj się!</string>
    <string name="nrLegitymacji_error">podaj 10-cyforwy numer</string>
    <string name="nrLegitymacji">numer legitymacji</string>
    <string name="password_error">niepoprawne hasło</string>
    <string name="password_re_enter_error">hasła są różne</string>
    <string name="password_re_enter">powtórz hasło</string>
    <string name="password">hasło</string>
    <string name="pesel_error">podaj 11-cyfrowy numer</string>
    <string name="pesel">pesel</string>
    <string name="processing">Przetwarzanie&#8230;</string>
    <string name="sign_in">Zaloguj</string>
    <string name="sign_out">Wyloguj</string>
    <string name="note_presence">Odnotuj obecność</string>
    <string name="sign_up_message">Na Twój e-mail został wysłany kod aktywacyjny</string>
    <string name="sign_up">Stwórz konto</string>
    <string name="tag_message">Zbliż telofon do tagu nfc aby odnotować obecność</string>
    <string name="cafeterias_coupons">Kupon na stołówkę</string>
    <string name="resignation">Zrezygnyj</string>
    <string name="ok">OK</string>
    <string name="close">Zamknij</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="cancel">Anuluj</string>
    <string name="loading_data">Wczytuje dane&#8230;</string>
    <string name="submit">Zatwierdź</string>
    <string name="no_nfc_message_p1">Twój telefon nie obsługuje NFC.</string>
    <string name="no_nfc_message_p2">Aby skorzystać z serwisu będziesz musiał wprowadzać kody ręcznie.</string>
    <string name="offline">Offline</string>
    <string name="cafeteria_no_internet_message">Aby skorzystać z tej funkcji potrzebne jest połącznie z internetem. Połącz urządzenie do internetu i kliknij przycisk offline jeżeli nie zniknie, aby zwryfikować dostęp do sieci.</string>
    <string name="cafeteria_no_nfc_message">Poproś ekspedientkę w stolówce studenckiej o kod do kuponu i wprowadź poniżej:</string>
    <string name="cafeteria_nfc_message">Proszę zbliżyć tag NFC na stołówce studenckiej w celu wygenerowania kuponu.</string>
    <string name="presence_nfc_message">Proszę zbliżyć tag NFC w celu odnotowania obecności na zajęciach.</string>
    <string name="presence_no_nfc_message">Poproś prowadzącego o idywidualny kod obecności i wprowadź poniżej:</string>
    <string name="wrong_code">Kod jest niepoprawny</string>
    <string name="cafeterias_coupon_used">Dzisiejszy kupon został już wykorzystany o godzinie:</string>
    <string name="save_code">Zapisz kod</string>
    <string name="try_connect_again">Ponów próbę połączenia z serwisem</string>
    <string name="no_internet_warning">Możliwe jest zapisanie kodu i odnotowanie obecności przy najbliższym poączeniu z interntem. Jednak ze względu na możliwe problemy np. nie aktualy TAG NFC, jest to nie zalecane.</string>
    <string name="saved_code_message">Kod jest już zapisany w pamięci.</string>
    <string name="no_code_message">Brak takiego kodu w bazie danych.</string>
    <string name="data_base_error">Błąd bazy danych proszę skontakatować się z administratorem serwisu</string>
    <string name="check">Sprawdź</string>
</resources>
