<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!-- Sign Up Message Label -->
        <TextView android:id="@+id/login_offline_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_offline_message"
            android:gravity="center"
            android:textSize="16dip"/>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login_offline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login_offline"/>

        <TextView android:id="@+id/link_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/back"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>