<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo_signature"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginBottom="56dp"
            android:layout_gravity="center_horizontal" />

        <!-- Tag Message Label -->
        <TextView android:id="@+id/sign_up_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/tag_message"
            android:gravity="center"
            android:textSize="16dip"/>

        <!-- Signout Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sign_out"/>

        <Button
            android:id="@+id/btn_nfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>
</ScrollView>